--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-deployment.yaml
@@ -38,6 +38,8 @@ spec:
               value: "true"
             - name: INSECURE
               value: "true"
+            - name: PROXY_PROTOCOL
+              value: "true"
             - name: SMTP_LOCAL_NAME
               value: smtp.lette.io
             - name: ACME_DOMAIN
