--- a/apps/lette-proxy/versions/1.0--1.0/manifests/lette-service.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/manifests/lette-service.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     load-balancer.hetzner.cloud/location: "nbg1"
     load-balancer.hetzner.cloud/name: "k8s01-lette"
+    load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
   labels:
     app: lette-proxy
 spec:
