--- a/apps/cilium/versions/1.0--1.18.6/values.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/values.yaml
@@ -90,6 +90,7 @@ ingressController:
   enabled: true
   default: true
   loadbalancerMode: shared
+  enableProxyProtocol: true
   enforceHttps: true
   defaultSecretNamespace: kube-system
   defaultSecretName: cilium-default-cert
@@ -98,6 +99,7 @@ ingressController:
     annotations:
       load-balancer.hetzner.cloud/location: "nbg1"
       load-balancer.hetzner.cloud/name: "k8s01-lb01"
+      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
 
 #gatewayAPI:
 #  enabled: false
