--- a/apps/cert-manager-webhook-namecom/versions/1.0--0.1.0/kustomization.yaml
+++ b/apps/cert-manager-webhook-namecom/versions/1.0--0.1.0/kustomization.yaml
@@ -1,3 +1,7 @@
 ---
 resources:
   - ./generated.yaml # generated from argo kustomized plugin
+  - ./manifests/namecom-cluster-issuer.yaml
+
+generators:
+  - ./secret-generator.yaml
