--- a/apps/lette-web/versions/1.0--1.0/manifests/lette-console-deployment.yaml
+++ b/apps/lette-web/versions/1.0--1.0/manifests/lette-console-deployment.yaml
@@ -24,3 +24,26 @@ spec:
             - name: http
               containerPort: 3000
               protocol: TCP
+          env:
+            - name: STRIPE_PRICE_ID
+              value: price_1LgD0wCz3lzvn3gMY9IgeRMo
+            - name: STRIPE_WEBHOOK_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: stripe
+                  key: webhook-secret
+            - name: STRIPE_PUBLIC_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe
+                  key: public-key
+            - name: STRIPE_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe
+                  key: secret-key
+            - name: SUPABASE_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-key
+                  key: key
