--- a/apps/lette-web/versions/1.0--1.0/kustomization.yaml
+++ b/apps/lette-web/versions/1.0--1.0/kustomization.yaml
@@ -5,3 +5,6 @@ resources:
   - ./manifests/lette-console-service.yaml
   - ./manifests/lette-landingpage-deployment.yaml
   - ./manifests/lette-landingpage-service.yaml
+
+generators:
+  - ./secret-generator.yaml
