--- a/apps/lette-web/versions/1.0--1.0/stripe-secret.enc.yaml
+++ b/apps/lette-web/versions/1.0--1.0/stripe-secret.enc.yaml
@@ -1,9 +1,24 @@
 apiVersion: v1
 data:
-  public-key: cGtfbGl2ZV81MUxRRzhoQ3ozbHp2bjNnTVByN1dwVmJDM0FnWTFTekphMFNpalV1Zlk2bHR1bWllYXVEam5Jd0hqcUxSYzljS0tvT0tEQ3BYSG5PTzQ5bmdZUmdNZVh1dzAwaWo2TUVSQXk=
-  secret-key: c2tfbGl2ZV81MUxRRzhoQ3ozbHp2bjNnTW5TaU1YMXVIT1h1Wkt1dzl4OU1xSEF2YW1YUllUT3ZWa1lDUGc5WWFnZUcxZ1RrVW5HVUUzdHlUU1hEcFU5aHZGZFVrTTRYQTAwNTV3V01tV0g=
-  webhook-secret: d2hzZWNfUjNMUjQ3OE95NE0wMGNTbjBzTHV1SWNNYnk0dko4QkU=
+    public-key: ENC[AES256_GCM,data:XaENgsrOuWB4IfSHqePcvaPmEjxS5tsOUOsTbKAps1BONCxDha3J12R/t8h0yo7jotSlM+91UXIfRD9x0u/0JmKG2ZFBfNP40S6w3IJSyauUEM/B5lI5g3cr6WGQ6uoFSGRJpPVLHoCkCtgFgr6ZMjGsNVyJcI9pw5bzjHgFPvqKjMH4KmXyQ55aQGR2y0LE,iv:x5xNHH8zmblFGOMsssftvGi5pultA7TeDM2CpTS1mY8=,tag:OOHsk37aC51fQ46K/2iYvw==,type:str]
+    secret-key: ENC[AES256_GCM,data:10v+FnD/dLYJ1/VtCjXJAsB4qS8F462zO/AsxfaJOCtSzW6XC5cdFVX4/D0xLpnRtJBuVFh72OkHH0DAUVeNSEEhxhRvbeKlt3qVva2QnLMv1138c2S9iLHmhucR4nDwcen7H1V3qGXYl0UkVy5qOEZ0ygQIuu4h6bliG/VsdHAL35eceNDSUTnbEgPUSqPy,iv:msX3QL4AEk99XCtaAG4RILBIxD5oXBrPx3h5nCv63yE=,tag:2HI1Vt8jdcGWcLj86rEyaA==,type:str]
+    webhook-secret: ENC[AES256_GCM,data:W3WvZ54lf7HvVodUHbVfiHGKZXQD4s4Gkn8/8KwErFK7bQXT0ayC3Avf+dpXLbn+rwvxNw==,iv:dtola4RxkBy3VEymErL1i+TKkoJ3RSwkbUTbBFUt+hM=,tag:t6H0PSsbxGxW4QSIncHSCg==,type:str]
 kind: Secret
 metadata:
-  name: stripe
+    name: stripe
 type: Opaque
+sops:
+    age:
+        - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCNGVwQ0pzbW5QYjEzK3VH
+            dFV5TzZRRkFWZHM1S0paejNhd1RVVEhHRFQwClB1dWhkaVplRjI3UXdUcFdERTRE
+            OHFZM1Q1bVphV1dzR0kyOVlIZE1KbE0KLS0tIDJjRXdBVlpDWCs5VWR1TVd6ajJv
+            cGpuOExvTHZTSEw5MXpGblRZRC9ZSXMKhmvLoKBRU9v7bn3Z3DRc/7uuUX4LPaOX
+            nF//Mwydes3hgt8meE3WpAX2bzh4BWxmb2dF6bphNcTPJoSSzfj/qA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-01-30T17:27:58Z"
+    mac: ENC[AES256_GCM,data:P+2apvTGXJuLLhdnnPR7zltUpHQgdA+OySgalF7ba59qGvnkrachic9on4PVc3cHhEgIRAjzMWHxKhM3LtRPq3x2DDJNGhbEQOaG2HsKKPb6FmpjRPkTDoRaEqvNyeQJZsLLCeEa9NIvLiLfbZLjY/YL5KNwpf1zwpS3+sPnOwU=,iv:iTEnSLYLb3cXECitepMbgo56el4FX7zsG4dUYm8/DlE=,tag:0zT80DgO8RXxLL50bw4zIA==,type:str]
+    unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
+    version: 3.11.0
