--- a/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
+++ b/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-namecom
-  name: lette-ingress
+  name: lette-web
 spec:
   rules:
   - host: lette.io
