--- a/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
+++ b/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
@@ -9,7 +9,7 @@ spec:
   - host: lette.io
     http:
       paths:
-      - pathType: PathPrefix
+      - pathType: Prefix
         path: /
         backend:
           service:
@@ -19,7 +19,7 @@ spec:
   - host: www.lette.io
     http:
       paths:
-      - pathType: PathPrefix
+      - pathType: Prefix
         path: /
         backend:
           service:
