--- a/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
+++ b/apps/lette-web/versions/1.0--1.0/manifests/lette-web-ingress.yaml
@@ -30,7 +30,7 @@ spec:
     http:
       paths:
       - pathType: ImplementationSpecific
-        path: "/(console|/console/.*|/_app/.*|/api/.*)"
+        path: "/(console|console/.*|_app/.*|api/.*)"
         backend:
           service:
             name: lette-console
@@ -40,7 +40,7 @@ spec:
     http:
       paths:
       - pathType: ImplementationSpecific
-        path: "/(console|/console/.*|/_app/.*|/api/.*)"
+        path: "/(console|console/.*|_app/.*|api/.*)"
         backend:
           service:
             name: lette-console
