--- a/apps/cilium/versions/1.0--1.18.6/values.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/values.yaml
@@ -101,5 +101,5 @@ ingressController:
       load-balancer.hetzner.cloud/name: "k8s01-lb01"
       load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
 
-#gatewayAPI:
-#  enabled: false
+gatewayAPI:
+  enabled: true
