--- a/apps/gateway-api/versions/1.0--1.2.0/kustomization.yaml
+++ b/apps/gateway-api/versions/1.0--1.2.0/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
 - manifests/gateway.networking.k8s.io_grpcroutes.yaml
 - manifests/gateway.networking.k8s.io_httproutes.yaml
 - manifests/gateway.networking.k8s.io_referencegrants.yaml
+- manifests/gateway.networking.k8s.io_tlsroutes.yaml
