--- a/apps/cilium/versions/1.0--1.18.6/kustomization.yaml
+++ b/apps/cilium/versions/1.0--1.18.6/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
   - ./generated.yaml
+  - ./manifests/gatewayclass.yaml
   - ./manifests/prometheusrules/cilium-health-endpoint-unreachable.yaml
   - ./manifests/prometheusrules/cilium-node-unreachable.yaml
