--- a/apps/lette-backend/versions/1.0--1.0/kustomization.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
   - ./manifests/lette-backend-deployment.yaml
   - ./manifests/lette-backend-service.yaml
   - ./manifests/lette-backend-ingress.yaml
+  - ./manifests/lette-backend-pb-data-pvc.yaml
 
 generators:
   - ./secret-generator.yaml
