--- a/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-    access-key-id: ENC[AES256_GCM,data:2mX39EC+0BS94fU6XTUmDHlt4RtoRMbduwZVdw==,iv:HIyz7CWBV1rAMjhkiXWceSmHmPggV1uGL5u8YPToe6g=,tag:jhU7gh1tjO209wzQgdbDBg==,type:str]
-    replication-url: ENC[AES256_GCM,data:yCzyUStNsCKRB0q9cu/NdObUVdSDF74N5roucyleJAT3Mfc0vuD1OIoNm6KFvDfeIZ+k6fxKKbbClTxQerE+npBQ/RzmwVC9vuGV99D3KnLZmD4Z,iv:EXJmuzMAft912N7M2RpAbaQyQeIWm0uUVsAzprDwT6w=,tag:9NE/7Q/V2lnCBFTeU6b+CQ==,type:str]
-    secret-key-id: ENC[AES256_GCM,data:8YWJo4TA+sCPN0FgCRFMKPITSZ1SPUZVUypuzlOQFKeFage8c+3zyulfV1DLjKwu/PEtP6t0z74=,iv:c+FWcAJZg1vblq1Aj064k2+8Hii6dtntq4IvLWUJFuE=,tag:5tMqezAYtqogxdhxYPyFNQ==,type:str]
+    access-key-id: ENC[AES256_GCM,data:gvY6O2JQrxe36cLEksiogXTULGoZ6zV7mJr14w==,iv:wHiUS6+0ELyIRKBd185vJHhkjKCNSRAOTI+6WXSu7oc=,tag:pF75ZkMHxnRIgcFk53fjRw==,type:str]
+    replication-url: ENC[AES256_GCM,data:ZFZfeyHdC6TzBqW5Ng1QgAbe3jLqkmtgjPkMPfeB4VnkccG8nrK/3ki/FkrmvWCr7PTh0BovE8ZQyTR16Jzt0yUroZAxZ7EUvcu5i5NCa2ERO62k,iv:f7rSh8DjFpQSq6b6+q94Qm+U5zr/JKg824Bf+d6k01E=,tag:qYpOHtgtYl43IGUXwcwcgg==,type:str]
+    secret-access-key: ENC[AES256_GCM,data:sQfre4jgQjIREQQwp7mn5703etCsEvSA1zC+8tezRH4OQPE+7B3a849vte+xhKUR0ok0wP7vzVI=,iv:niNSMt/EyQ/QMitDqJCVKaw5uEceVAh4OfbhGjyeVw8=,tag:CGHHpeHAGgjbtpdgFYEw3w==,type:str]
 kind: Secret
 metadata:
     name: litestream
@@ -12,13 +12,13 @@ sops:
         - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6aTNMdlRzdzhhNm9FQ0VP
-            dnpuZW5abHF3cmU0SUVyK01MR1lUekFYcURJCndydGZFSXc4QW04cUlYSTdtOU9k
-            NmlIQU9QTVhEWXFaNkpOQUFqWkpjNncKLS0tIHZTYzFvb0VDNE4yQVZFTWgydEhI
-            UWVuVllVRDU0dzdtYi93TllNOENIbHMK2pFeXtXpgekx0tcw94CYQqX2J4lt6qTA
-            WBX8ik0r8TsbAdgn6E1txnH2X1dny2jaDB+Btarnx71PNTzasktzFw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4bk9KQ0pZRnJON3FqeXdU
+            dTZvcGZHd05EL2ZnZTBoS0RIUy9ZdXlkakZnCmFORjRxdVJMUlF2b3NueTVyeE44
+            dExhMzR5a1habEhXc0pjQ0h2UjlUWlEKLS0tIHlyeS9QVldHTDUrVTZmYWprMkkz
+            blRlSzk0Q25UcmtyaklBdXBkTG9tMzAKeQZmFRSmoxDDclxosvy9LPR/bzqF8kkX
+            HQ7rdS5JUHFUOOEztO5TLfTWhCK0SlZAd2AQg3mlVH/z86sPdPLBEA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-01T11:18:32Z"
-    mac: ENC[AES256_GCM,data:rDq6OowJ67Rbjw0lrCMmrHz9Z+QdX4nvKotPuQl62jMpt7u7z/AxIsU3htOcMs2BsPI5DmL9fJAz4idKGSqK4ysKbzG/zj/tkCmuKjE1xrB2Mn6ubfUj1kzmyW9MUndTv87zwe0IUhWvUUwWQVfmtg4/MjSuAG7fo2SqqpMw5YE=,iv:igeCziOb3ye/Au7AhTrkkopAGrUq1HEUyo8OEm2bt2Q=,tag:3bBUdwZx8YcUs8acl2C/Rg==,type:str]
+    lastmodified: "2026-02-01T16:13:04Z"
+    mac: ENC[AES256_GCM,data:iuLdXSUKqnlukxY/ksvdOMlzIDxBgJcnlpx7eb9Pvf0p+zwyivskmHF/ZcnRRklS8UgrABpj7p8rqOSWPoBTOVpMyZKZQJWK4G6di8OLQedfpq2fUNDddY6isqd50NsCVsUkM9om1u1X0Z6uJhzMM6m5x8Id08aw5OowxZaTQ5s=,iv:C3dszfvak8EgNic/5Lj6KiVhLZKLmhaJ+rO9TfzzGNY=,tag:oBJxWDRoC9bhqUod+Qfpfw==,type:str]
     unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
     version: 3.11.0
