--- a/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-    access-key-id: ENC[AES256_GCM,data:gvY6O2JQrxe36cLEksiogXTULGoZ6zV7mJr14w==,iv:wHiUS6+0ELyIRKBd185vJHhkjKCNSRAOTI+6WXSu7oc=,tag:pF75ZkMHxnRIgcFk53fjRw==,type:str]
-    replication-url: ENC[AES256_GCM,data:ZFZfeyHdC6TzBqW5Ng1QgAbe3jLqkmtgjPkMPfeB4VnkccG8nrK/3ki/FkrmvWCr7PTh0BovE8ZQyTR16Jzt0yUroZAxZ7EUvcu5i5NCa2ERO62k,iv:f7rSh8DjFpQSq6b6+q94Qm+U5zr/JKg824Bf+d6k01E=,tag:qYpOHtgtYl43IGUXwcwcgg==,type:str]
-    secret-access-key: ENC[AES256_GCM,data:sQfre4jgQjIREQQwp7mn5703etCsEvSA1zC+8tezRH4OQPE+7B3a849vte+xhKUR0ok0wP7vzVI=,iv:niNSMt/EyQ/QMitDqJCVKaw5uEceVAh4OfbhGjyeVw8=,tag:CGHHpeHAGgjbtpdgFYEw3w==,type:str]
+    access-key-id: ENC[AES256_GCM,data:eJcpLwnsTMnohGQQ3+qLCcSnWoBhjGEngYF5pw==,iv:rYigS0/yn6stvs8EBdgdyMqKvoyPs3RUhp0OF38gyv4=,tag:Y5lptEn/9I10G5cOtIuzAg==,type:str]
+    replication-url: ENC[AES256_GCM,data:64BT5R8z+CcLUukxrg2/qgUNh+xgrX8gMNaaCgGWB59el9K7uNsRv1Ll/fU6HtS3baJCSoPUd29uYesldj3MuN9I4pI4XpX6DqgNbNkXyE4=,iv:XTX4vpTAXpjSUxIvHjGuGnQYLE2IG6eHU9LDkifvK5A=,tag:r3lFRw+LGdcDvrsvlVk8+w==,type:str]
+    secret-key-id: ENC[AES256_GCM,data:fjuHg8waqAdjuckcrH1ULxV59dVOAeGGsCS3D9c1WcPlcOdZanZVH3jHZq/zAYO1LXkVN5tRrIc=,iv:6oARMRCnRqr5jnet3XencVzy0/aVl0eqVd8I+ap0vAY=,tag:OePq/DVsG9bjjb6VT/eHHA==,type:str]
 kind: Secret
 metadata:
     name: litestream
@@ -12,13 +12,13 @@ sops:
         - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4bk9KQ0pZRnJON3FqeXdU
-            dTZvcGZHd05EL2ZnZTBoS0RIUy9ZdXlkakZnCmFORjRxdVJMUlF2b3NueTVyeE44
-            dExhMzR5a1habEhXc0pjQ0h2UjlUWlEKLS0tIHlyeS9QVldHTDUrVTZmYWprMkkz
-            blRlSzk0Q25UcmtyaklBdXBkTG9tMzAKeQZmFRSmoxDDclxosvy9LPR/bzqF8kkX
-            HQ7rdS5JUHFUOOEztO5TLfTWhCK0SlZAd2AQg3mlVH/z86sPdPLBEA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURjcweVloUXdTM1dmTnBO
+            eGdONmNpcGZGclFOU1V2M08xMUlqNml3Z0F3CmVnTDgyc0FsbTJIckJSVldhT0dU
+            UDFyTUllSEg4STIvUjN6OWRGZ1pYeGsKLS0tIHp0MlExeXZHZk5yYkJCcmJzSVhO
+            ZER3dG5nZGVEYnF0THljY1BmaTRTUG8KArzgVJiBIYl06BRjXy2pjHoqt/MuI2LW
+            rts0UBNhm12whTve3IcP6VszcfiITPNicG/vAkYqZ0V/6HuD7mbMgQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-01T16:13:04Z"
-    mac: ENC[AES256_GCM,data:iuLdXSUKqnlukxY/ksvdOMlzIDxBgJcnlpx7eb9Pvf0p+zwyivskmHF/ZcnRRklS8UgrABpj7p8rqOSWPoBTOVpMyZKZQJWK4G6di8OLQedfpq2fUNDddY6isqd50NsCVsUkM9om1u1X0Z6uJhzMM6m5x8Id08aw5OowxZaTQ5s=,iv:C3dszfvak8EgNic/5Lj6KiVhLZKLmhaJ+rO9TfzzGNY=,tag:oBJxWDRoC9bhqUod+Qfpfw==,type:str]
+    lastmodified: "2026-02-01T16:25:37Z"
+    mac: ENC[AES256_GCM,data:N/oLjpoAUbkPp+0Za7XZvr0LKEdvv/2c4nVo52+b4r3FTu2xg4iAaZFdh6nO1nHLHz2GW7pL2JO12hoGioVzfAMIbdIr42WRvvWwSS2xvfWUVbIeGEY3S2lx8yYGbbMIhsgUQu84nPJG8hGoThFvAt7FS29hrvfwTnjUl1ao5H0=,iv:Q82XVdLRquw6LQ7esu8Wsx7jKejwjLvF1empAGipMHE=,tag:AHyyIKR71pKY4UUzvUM8oA==,type:str]
     unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
     version: 3.11.0
