--- a/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-    access-key-id: ENC[AES256_GCM,data:eJcpLwnsTMnohGQQ3+qLCcSnWoBhjGEngYF5pw==,iv:rYigS0/yn6stvs8EBdgdyMqKvoyPs3RUhp0OF38gyv4=,tag:Y5lptEn/9I10G5cOtIuzAg==,type:str]
-    replication-url: ENC[AES256_GCM,data:64BT5R8z+CcLUukxrg2/qgUNh+xgrX8gMNaaCgGWB59el9K7uNsRv1Ll/fU6HtS3baJCSoPUd29uYesldj3MuN9I4pI4XpX6DqgNbNkXyE4=,iv:XTX4vpTAXpjSUxIvHjGuGnQYLE2IG6eHU9LDkifvK5A=,tag:r3lFRw+LGdcDvrsvlVk8+w==,type:str]
-    secret-key-id: ENC[AES256_GCM,data:fjuHg8waqAdjuckcrH1ULxV59dVOAeGGsCS3D9c1WcPlcOdZanZVH3jHZq/zAYO1LXkVN5tRrIc=,iv:6oARMRCnRqr5jnet3XencVzy0/aVl0eqVd8I+ap0vAY=,tag:OePq/DVsG9bjjb6VT/eHHA==,type:str]
+    access-key-id: ENC[AES256_GCM,data:fYgdJnhrnEKYcgj9byGoIu6zDpQwgMBiOhApFA==,iv:N+l6+m2heEMu+LXaSShiLMlST2aPXH3bGhZrvTMBw/4=,tag:1mAHR9VWiZeCBIPa7qebBg==,type:str]
+    replication-url: ENC[AES256_GCM,data:mYWWBSR0bt3QI4ympyDbUDotIlTLGaiz8WkpsSP/pnIK/u9F6wVEpXMG52Hqd/72nb4W7G9rQIt2c1WZ0zIPHQPN3lrmUJ8St2X54+VkDjg=,iv:pg3yynTAVI3AGyz6iwVUdpDhGqg48Bp/cqC2GHRIFS4=,tag:wyUhsCQIVycVqieOPKjMzQ==,type:str]
+    secret-access-key: ENC[AES256_GCM,data:PPSKbbnCUIc2yjsbBcJTpa9VrJFBVTlqU/akZwrGaYiQje/jEhRKkpwiuw1JKg3vD+rcjWpKpbk=,iv:88FlwAN8ROdeFaz28q6pNauC4zGu7zEGaHqe2VJEjIY=,tag:C5ABtPxjy/HJJczFePtxrw==,type:str]
 kind: Secret
 metadata:
     name: litestream
@@ -12,13 +12,13 @@ sops:
         - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURjcweVloUXdTM1dmTnBO
-            eGdONmNpcGZGclFOU1V2M08xMUlqNml3Z0F3CmVnTDgyc0FsbTJIckJSVldhT0dU
-            UDFyTUllSEg4STIvUjN6OWRGZ1pYeGsKLS0tIHp0MlExeXZHZk5yYkJCcmJzSVhO
-            ZER3dG5nZGVEYnF0THljY1BmaTRTUG8KArzgVJiBIYl06BRjXy2pjHoqt/MuI2LW
-            rts0UBNhm12whTve3IcP6VszcfiITPNicG/vAkYqZ0V/6HuD7mbMgQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNOVcwSDRQaW1ieWJDbmlp
+            SXNvWDNqMkF5c1U3b0ZVcFBUVi9LSUgxM21zCjd3MXBBdTJJL3NFeG5PTnVaNEkr
+            RlJaS3BrSjBDM2tYc1BQYTV3cmI1YWMKLS0tIDRKYzFxbGhHTGZ4NGwyT2RUTUlM
+            MjZnS1ZDVkRmQ0ZEV3V1cGM4dmdrWVkKmnWFygr7tzegWKbclitmzgvC/Ua5GrC3
+            Q7+2gTl6t70M7YX63w3uvp+y8OPMj5MCsFAk+sJ9cTfD5KCigCmxUg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-01T16:25:37Z"
-    mac: ENC[AES256_GCM,data:N/oLjpoAUbkPp+0Za7XZvr0LKEdvv/2c4nVo52+b4r3FTu2xg4iAaZFdh6nO1nHLHz2GW7pL2JO12hoGioVzfAMIbdIr42WRvvWwSS2xvfWUVbIeGEY3S2lx8yYGbbMIhsgUQu84nPJG8hGoThFvAt7FS29hrvfwTnjUl1ao5H0=,iv:Q82XVdLRquw6LQ7esu8Wsx7jKejwjLvF1empAGipMHE=,tag:AHyyIKR71pKY4UUzvUM8oA==,type:str]
+    lastmodified: "2026-02-01T16:30:42Z"
+    mac: ENC[AES256_GCM,data:uEWdHy1fuy03r6vxe5qGAYZn2G0SPi+nISI8GD6UNXBQpxRUS3W3pWBT6aHuPNVUCpwE2KpR6d+Isny490LkegEsVxLWZRZkaSCY/7/HW+NJplspljDcLzNEKPmrAcaq19YYeaNilPfyQcJwDaXzP781IXhKTNG9YgKs3TTX69M=,iv:9H8255PlCCWlhmG3No26v3OsRozhejr5d2KesCohQHA=,tag:w1pZmt0Vje9uCEWuFho6Qw==,type:str]
     unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
     version: 3.11.0
