--- a/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-deployment.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-deployment.yaml
@@ -30,10 +30,9 @@ spec:
               mountPath: /pg/pb_data
           env:
             - name: LITESTREAM_REPLICATION_URL
-              valueFrom:
-                secretKeyRef:
-                  name: litestream
-                  key: replication-url
+              value: s3://fsn1.your-objectstorage.com/rbs01/lette/backend/data.db
+            - name: LITESTREAM_REGION
+              value: fsn1
             - name: LITESTREAM_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
