--- a/apps/lette-backend/versions/1.0--1.0/manifests/litestream-configmap.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/manifests/litestream-configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 data:
   litestream.yml: |
     region: fsn1
+    logging:
+      level: debug
 kind: ConfigMap
 metadata:
   name: litestream
