--- a/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
@@ -1,23 +1,8 @@
 apiVersion: v1
 data:
-    access-key-id: ENC[AES256_GCM,data:Q7gEbHMPtTX5cmYgq2f1fVMgTHMV7bItV0R1Kg==,iv:liCT2/ksoJVb1/2rJVXlVIqvPLV+cjKGCWJ01LMk4yM=,tag:yn/yLZkyzh/5JePRab9CJg==,type:str]
-    secret-access-key: ENC[AES256_GCM,data:Aovhiwu39zGtM5SYyMj6HsaqMA5+nwAVh4d6ve164ZXAr5LCgtkBgai8qVv6oop5OsVSfV16yFU=,iv:wfX/HxS2IZAc8PvmWA6L8mK7YXzrn5UtxAk9/xDa3Kg=,tag:gcd3BKtSE4etq5g0aNRWqA==,type:str]
+    access-key-id: T1NIQlJJTk05NlZEUUlCNDBDUDMK
+    secret-access-key: TUlnaDlTOVRlMVFOVXJFOWo3QlhwV0hYdmRiNFlDUnZ1MzVCcDFYUQo=
 kind: Secret
 metadata:
     name: litestream
 type: Opaque
-sops:
-    age:
-        - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYcUZwbUpuVXpzRGFQa1Jr
-            TGdEUXZPcFRkUHdNbW5PSW5DelhWSkJmbmxjCjVMdC94M045dWVybnpYYy9mcHJU
-            Y0RaaUxMd2lYbTVYUm5ER3VaZ1hPT1kKLS0tIGlxZjM2MitlNXlzTW9tTTlTL2tw
-            a3YrTlhnQldlN1pFVmprdk80ejh4djgK5KF5Gil7jqYNfdMROWRHgdiEcpAUIt3W
-            Le1izqDkzLLHtFlggDBwZpGDa8u/sYrI5KWezWGmaevW4/4s1y3bvA==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-01T16:52:20Z"
-    mac: ENC[AES256_GCM,data:EDHpIIRcgLMi9Mj7+FQF2Nxig4NW6TbSLMxn9tGsiUxk/+vvcs1PDesdo6V5LCr5D8cIwqkEqabv/IRatVs/vjuf7gqlhe4T70cN6U0AeHO0bM21ti8sGbaHEgXD/XqEmvZkktHu6t2Wb5VRuEjHWbHCIu8nZKElRzuHnbSxWp0=,iv:FYCh5sXrh7ZOWnvQOimaxmy+7kBHz5v/PLVfR9SaL9U=,tag:smV1syb+7dbZMIJmAVOSXg==,type:str]
-    unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
-    version: 3.11.0
