--- a/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/litestream-secret.enc.yaml
@@ -1,8 +1,23 @@
 apiVersion: v1
 data:
-    access-key-id: T1NIQlJJTk05NlZEUUlCNDBDUDMK
-    secret-access-key: TUlnaDlTOVRlMVFOVXJFOWo3QlhwV0hYdmRiNFlDUnZ1MzVCcDFYUQo=
+    access-key-id: ENC[AES256_GCM,data:rDws8v64EkqZeZhYe4a8WQFkcB1kUhtvcr9K8w==,iv:lwIwE3ymxEeVnZbjreT0mB0TsPzrkxWbnkXDQLziOIY=,tag:h5NyJhiYRb/dR4Co9W/nbQ==,type:str]
+    secret-access-key: ENC[AES256_GCM,data:wbBGkI/MFAAh4avLycwZiaBX5OuQd8FUupUzlT6nVwpsQMqFFghsX+tjZAuqmeyc2jmQ4lX7JGU=,iv:ROBeZfK6UJphIux8HccVlfslklwfnhY5xl0Oyj7Oq4o=,tag:OXUb16ISq6ywunOS+kphvQ==,type:str]
 kind: Secret
 metadata:
     name: litestream
 type: Opaque
+sops:
+    age:
+        - recipient: age1vvpm73fq42ywkr7jeuewjpk8d9hew9u3dq389dy9r85ugezqgy6qh8zqzy
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1U2twelZ6NTl5VWdHNkNq
+            UXRPb0Y3aTB5dkVUdVFUTDM0aE5WU2JwbFRBCkhwaUdTV1g1RlU5TUhpWHNyMFpi
+            MkJQM1diOUtYRTllVVQrU29FdDFUaEEKLS0tIDYwUUNVdXA1ZThhQW1lWE9vQklL
+            cnZFZzFtNytRREljWitSaGQxN2JZT2MK32jKTgsVW3sQzdyaJZG3Wr5V7BFmQacM
+            +5ZyLm883piYIO9MdfQUnXmhmh5Yv1wbFeKkHQS4KADGB0O3QKtuxw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-02-01T17:11:06Z"
+    mac: ENC[AES256_GCM,data:g3Hy4mBDAX3dlNKbxjnuEYj1XQ30SFFoTlI26pWIwqB5VYvvcSvRsSqr/pprz2BgOkiMwv2ttrW6iskORqh0DyCfcSxkuWMnhUPP8VxZtfSNtGoqEwOYcqljr6Nq3qsOyNH9TQRvrNKQkKWK9NrtNyaA2bGsEPaQtNHbo47mjMs=,iv:YnbukhDFZiEJIAm1CZRDyY0HTSTwkil+WaYKybNM1uY=,tag:98PFKcSiSSaE8f1kkd5btg==,type:str]
+    unencrypted_regex: ^(apiVersion|kind|metadata|type|namespace)$
+    version: 3.11.0
