--- a/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-ingress.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-ingress.yaml
@@ -18,6 +18,5 @@ spec:
               number: 80
   tls:
   - hosts:
-    - lette.io
-    - www.lette.io
+    - backend.lette.io
     secretName: lette-backend-cert
