--- a/apps/lette-web/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/lette-web/versions/1.0--1.0/secret-generator.yaml
@@ -7,5 +7,6 @@ metadata:
       exec:
         path: ksops
 files:
-  - ./supabase-key-secret.enc.yaml
   - ./stripe-secret.enc.yaml
+#  - ./supabase-key-secret.enc.yaml
+
