--- a/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-ingress.yaml
+++ b/apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-ingress.yaml
@@ -10,7 +10,7 @@ spec:
     http:
       paths:
       - pathType: Prefix
-        path: /api
+        path: /
         backend:
           service:
             name: lette-backend
