--- a/apps/lette-web/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/lette-web/versions/1.0--1.0/secret-generator.yaml
@@ -8,5 +8,6 @@ metadata:
         path: ksops
 files:
   - ./stripe-secret.enc.yaml
+  - ./pb-credentials-secret.enc.yaml
 #  - ./supabase-key-secret.enc.yaml
 
