--- a/apps/lette-proxy/versions/1.0--1.0/secret-generator.yaml
+++ b/apps/lette-proxy/versions/1.0--1.0/secret-generator.yaml
@@ -10,4 +10,5 @@ files:
   - ./redis-secret.enc.yaml
   - ./client-keypair-secret.enc.yaml
   - ./namedotcom-token-secret.enc.yaml
-  - ./supabase-key-secret.enc.yaml
+  - ./pb-credentials-secret.enc.yaml
+  #- ./supabase-key-secret.enc.yaml
